# octane-ocelot

./: .gitignore  .gitmodules  .rgignore  CMakeLists.txt  LICENSE  Makefile  shell.nix
assets/shaders/: simple_lit.frag  simple_lit.vert  unlit.vert  unlit_uv1.frag  unlit_uv1.vert
assets/shaders/editor/: wireframe_unlit.vert
docs/: .gitignore
docs/ocelot/: Octane Documentation.md
docs/ocelot/Files/: Tupperware Binary Format (.oct).md
include/: endian.h  file_io.h  math_utils.h  oct.h  platform.h  print_utils.h  utils.h
include/byteconv/: bswap.h
include/common/: dbuf.h
include/engine/core/: controls.h  runtime.h  scene.h  window.h
include/engine/geometry/: attributes.h
include/engine/graphics/: camera.h  model.h  shader.h
include/filesys/: endian.h  oct.h
include/gui/: window.h
include/ocelot/: dbuf.h  endian.h  engine_state.h  math_types.h  math_utils.h  memory.h  print_utils.h
include/ocelot/engine/: camera.h  core.h  model.h  scene.h  window.h
include/ocelot/scene/: data.h
include/octane/: ibuf.h  oct.h  oct_atoms.h  oct_nameBindings.h  oct_scene.h  thb.h  vbuf.h
include/octane/ibuf/: ibuf.h  ibuf.pc.h  ibuf.xbox.h
include/octane/oct/: atoms.h  enums.h  enums.pc.h  enums.xbox.h  name_bindings.h  oct.h  scene.h  scene_descriptor.h
include/octane/vbuf/: vbuf.h  vbuf.pc.h  vbuf.xbox.h
include/types/: crc.h  file_bmp.h  mat4x4.h  texture.h  uuid.h  vector.h
lib/debug/glad/include/glad/: glad.h
lib/release/glad/include/glad/: glad.h
lib/release/glad/src/: glad.c
libs/: CMakeLists.txt
libs/byte-conv/: CMakeLists.txt
libs/byte-conv/include/byteconv/: endian.h
libs/byte-conv/src/: bswap.c  endian.c
libs/console/: CMakeLists.txt
libs/console/include/console/: log.h
libs/console/src/: log.c
libs/data-buffer/: CMakeLists.txt
libs/data-buffer/include/data/: dbuf.h
libs/data-buffer/src/: dbuf.c  dbuf_rw.c
libs/dbuf/: CMakeLists.txt
libs/dbuf/include/data/: bswap.h  endian.h
libs/dbuf/src/: bswap.c  dbuf.c  dbuf_rw.c  endian.c
libs/file-path/: CMakeLists.txt
libs/file-path/include/io/: filepath.h
libs/file-path/src/: filepath.c  filepath.linux.c
libs/glad/: CMakeLists.txt
libs/glad/debug/src/: glad.c
libs/hash-table/: CMakeLists.txt
libs/hash-table/include/data/: hash_table.h
libs/hash-table/src/: hash_table.c
libs/model-io/: CMakeLists.txt
libs/model-io/include/model/: obj.h
libs/model-io/src/: internal.h
src/: CMakeLists.txt  endian.c  file_io.c  main.c  main_cli.c  main_editor.c  main_test.c  math_utils.c  oct.c
src/byteconv/: bswap.c  endian.c
src/common/: CMakeLists.txt  bswap.c  dbuf.c  dbuf_rw.c  endian.c
src/engine/: CMakeLists.txt  camera.c  engine_state.c  init.c  internal.h  math_utils.c  memory.c  model.c  scene.c  scene_load.c  state.c  window.c
src/engine/graphics/: CMakeLists.txt  attrib_info.c  camera.c  internal.h  model.c  shader.c
src/engine/runtime/: CMakeLists.txt  controls.c  window.c
src/engine/scene/: CMakeLists.txt  load.c  scene.c
src/filesys/: endian.c  file_io.c  fs_internal.h  oct.c  oct_decode.c  oct_encode.c
src/gui/: window.c
src/math/: impl.c  init.c
src/ocelot/: CMakeLists.txt  bswap.c  color_convert.c  crc.c  dbuf.c  dbuf_rw.c  endian.c  file_bmp.c  internal.h  math_impl.c  print_utils.c  texture.c  uuid.c
src/ocelot/scene/: CMakeLists.txt  data.c
src/octane/: CMakeLists.txt  ibuf.c  oct.c  oct_atom.c  oct_decode.c  oct_encode.c  oct_internal.h  oct_loadBindings.c  oct_parseAtom.c  oct_parseEnum.c  oct_parseScene.c  oct_scene.c  oct_scene_internal.h  oct_serialize.c  oct_tableSearch.c  print_utils.c  vbuf.c  vbuf_decode.c
src/octane/ibuf/: CMakeLists.txt  ibuf.c  ibuf.pc.c  ibuf.xbox.c  internal.h
src/octane/oct/: CMakeLists.txt  decode.c  encode.c  internal.h  load_bindings.c  oct.c  parse_atom.c  parse_descriptor.c  parse_enum.c  parse_scene.c
src/octane/vbuf/: CMakeLists.txt  convert.c  internal.h  vbuf.c  vbuf.pc.c  vbuf.xbox.c
src/platform/: CMakeLists.txt  platform.c
